--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/MessageControlStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/MessageControlStyle.axaml
@@ -33,6 +33,7 @@
                         Padding="{TemplateBinding Padding}"
                         Background="{TemplateBinding Background}"
                         BorderBrush="{TemplateBinding BorderBrush}"
+                        ClipToBounds="{TemplateBinding ClipToBounds}"
                         CornerRadius="{TemplateBinding CornerRadius}">
                         <Grid>
                             <TextBlock
