--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/TimelineItemStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/TimelineItemStyle.axaml
@@ -5,11 +5,7 @@
     <Design.PreviewWith>
         <Border Padding="20">
             <lay:LayTimeline Width="100">
-                <lay:LayTimelineItem Content="内容" Header="头部信息">
-                    <lay:LayTimelineItem.Icon>
-                        <TextBlock Foreground="White" Text="1" />
-                    </lay:LayTimelineItem.Icon>
-                </lay:LayTimelineItem>
+                <lay:LayTimelineItem Content="内容" Header="头部信息" />
                 <lay:LayTimelineItem Content="内容" Header="头部信息" />
                 <lay:LayTimelineItem Content="内容" Header="头部信息" />
                 <lay:LayTimelineItem Content="内容" Header="头部信息" />
@@ -17,37 +13,48 @@
         </Border>
     </Design.PreviewWith>
     <Style Selector="lay|LayTimelineItem">
-        <Setter Property="Foreground" Value="{DynamicResource LightBlack}" />
-        <Setter Property="Background" Value="{DynamicResource LightBlack}" />
+        <Setter Property="Background" Value="{DynamicResource Gray}" />
+        <Setter Property="ClipToBounds" Value="false" />
+        <Setter Property="Padding" Value="5 0" />
         <Setter Property="Template">
             <ControlTemplate>
-                <Grid ColumnDefinitions="auto,*" RowDefinitions="auto,*">
+                <Grid
+                    ClipToBounds="{TemplateBinding ClipToBounds}"
+                    ColumnDefinitions="auto,*"
+                    RowDefinitions="auto,*">
+                    <Grid
+                        x:Name="PART_LineGrid"
+                        Grid.RowSpan="2"
+                        Width="1"
+                        Background="{Binding RelativeSource={RelativeSource AncestorType=lay:LayTimeline}, Path=LineColor}" />
                     <Grid x:Name="PART_IconGrid" RowDefinitions="*,auto,*">
                         <Grid
                             x:Name="PART_EllipseLineGrid"
                             Grid.RowSpan="3"
                             Width="1"
-                            Background="{TemplateBinding Background}" />
-                        <Border
+                            Background="{Binding RelativeSource={RelativeSource AncestorType=lay:LayTimeline}, Path=LineColor}" />
+                        <ContentPresenter
                             Grid.Row="1"
-                            Width="{TemplateBinding IconWidth}"
-                            Height="{TemplateBinding IconHeight}"
+                            Width="{Binding RelativeSource={RelativeSource AncestorType=lay:LayTimeline}, Path=IconWidth}"
+                            Height="{Binding RelativeSource={RelativeSource AncestorType=lay:LayTimeline}, Path=IconHeight}"
                             Background="{TemplateBinding Background}"
-                            CornerRadius="{TemplateBinding IconCornerRadius}">
-                            <ContentPresenter Content="{TemplateBinding Icon}" />
-                        </Border>
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            Content="{TemplateBinding Icon}"
+                            ContentTemplate="{TemplateBinding IconTemplate}"
+                            CornerRadius="{Binding RelativeSource={RelativeSource AncestorType=lay:LayTimeline}, Path=IconCornerRadius}" />
                     </Grid>
-                    <Grid
-                        x:Name="PART_LineGrid"
-                        Grid.RowSpan="2"
-                        Width="1"
-                        Background="{TemplateBinding Background}" />
-                    <Border Grid.Column="1">
-                        <ContentPresenter Content="{TemplateBinding Header}" ContentTemplate="{TemplateBinding HeaderTemplate}" />
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="1">
-                        <ContentPresenter Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" />
-                    </Border>
+                    <ContentPresenter
+                        Grid.Column="1"
+                        Padding="{TemplateBinding Padding}"
+                        Content="{TemplateBinding Header}"
+                        ContentTemplate="{TemplateBinding HeaderTemplate}" />
+                    <ContentPresenter
+                        Grid.Row="2"
+                        Grid.Column="1"
+                        Padding="{TemplateBinding Padding}"
+                        Content="{TemplateBinding Content}"
+                        ContentTemplate="{TemplateBinding ContentTemplate}" />
                 </Grid>
             </ControlTemplate>
         </Setter>
