--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CardStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CardStyle.axaml
@@ -24,8 +24,8 @@
         </Border>
     </Design.PreviewWith>
     <Style Selector="lay|LayCard">
+        <Setter Property="CornerRadius" Value="{DynamicResource LayCornerRadiusSmall}" />
         <Setter Property="Blur" Value="4" />
-        <Setter Property="CornerRadius" Value="1" />
         <Setter Property="ShadowColor" Value="{DynamicResource Gray}" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="ClipToBounds" Value="false" />
