--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/ListBoxItemStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/ListBoxItemStyle.axaml
@@ -25,6 +25,7 @@
                     Background="{TemplateBinding Background}"
                     BorderBrush="{TemplateBinding BorderBrush}"
                     BorderThickness="{TemplateBinding BorderThickness}"
+                    ClipToBounds="{TemplateBinding ClipToBounds}"
                     CornerRadius="{TemplateBinding CornerRadius}">
                     <Border.Transitions>
                         <Transitions>
