--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/ToggleButtonStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/ToggleButtonStyle.axaml
@@ -24,6 +24,7 @@
                         Background="{TemplateBinding Background}"
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}"
+                        ClipToBounds="{TemplateBinding ClipToBounds}"
                         CornerRadius="{TemplateBinding CornerRadius}">
                         <ContentPresenter
                             Name="PART_ContentPresenter"
