--- a/src/LayuiAvaloniaPack/Layui.Main/Views/CarouselPage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/CarouselPage.axaml
@@ -10,21 +10,44 @@
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
-    <lay:LayCarousel
-        Margin="5"
-        ItemsSource="{Binding Items}"
-        SelectedIndex="{Binding SelectedIndex, Mode=TwoWay}"
-        Type="Hover">
-        <lay:LayCarousel.ItemTemplate>
-            <DataTemplate>
-                <Grid Background="{DynamicResource Green}">
-                    <TextBlock
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Foreground="White"
-                        Text="{Binding Title}" />
-                </Grid>
-            </DataTemplate>
-        </lay:LayCarousel.ItemTemplate>
-    </lay:LayCarousel>
+    <ScrollViewer HorizontalScrollBarVisibility="Disabled">
+        <StackPanel>
+            <lay:LayCarousel
+                Height="400"
+                Margin="5"
+                ItemsSource="{Binding Items}"
+                SelectedIndex="{Binding SelectedIndex, Mode=TwoWay}"
+                Type="Hover">
+                <lay:LayCarousel.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Background="{DynamicResource Green}">
+                            <TextBlock
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Foreground="White"
+                                Text="{Binding Title}" />
+                        </Grid>
+                    </DataTemplate>
+                </lay:LayCarousel.ItemTemplate>
+            </lay:LayCarousel>
+            <lay:LayCarousel
+                Height="400"
+                Margin="5"
+                IsAutoSwitch="True"
+                ItemsSource="{Binding Items}"
+                Type="Hover">
+                <lay:LayCarousel.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Background="{DynamicResource Green}">
+                            <TextBlock
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Foreground="White"
+                                Text="{Binding Title}" />
+                        </Grid>
+                    </DataTemplate>
+                </lay:LayCarousel.ItemTemplate>
+            </lay:LayCarousel>
+        </StackPanel>
+    </ScrollViewer>
 </UserControl>
