--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CarouselItemStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CarouselItemStyle.axaml
@@ -12,6 +12,7 @@
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="Foreground" Value="Black" />
         <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Focusable" Value="false" />
         <Setter Property="Transitions">
             <Setter.Value>
                 <Transitions>
